<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/regdate"
        android:layout_weight="1"/>
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rdate"/>
        </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/client_name"
            android:layout_weight="1"/>
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cname"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/regnum"
            android:layout_weight="1"/>
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rnum"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mark"
            android:layout_weight="1"/>
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mark"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/place"
            android:layout_weight="1"/>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/place"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Назначить место"
            android:onClick="setPlace"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Записать"
        android:onClick="send"/>
    </LinearLayout>
</LinearLayout>